After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773580 - v4l2object: fix extra-controls leak
v4l2object: fix extra-controls leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.8.2
Other Linux
: Normal normal
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-27 10:09 UTC by Tobias
Modified: 2016-10-31 16:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch for bug (853 bytes, patch)
2016-10-27 10:09 UTC, Tobias
committed Details | Review

Description Tobias 2016-10-27 10:09:17 UTC
Created attachment 338593 [details] [review]
patch for bug

Gst structure v4l2object->extra_controls is created if user sets appropriate
option but it is not freed on destruction of v4l2object.
Comment 1 Nicolas Dufresne (ndufresne) 2016-10-27 13:14:50 UTC
Review of attachment 338593 [details] [review]:

Thanks, good catch.